Fix: overflow test comm Ref: padding entre footer et content

--- a/app/static/styles/testcomm.css
+++ b/app/static/styles/testcomm.css
@@ -30,3 +30,23 @@ td {
 	max-width: 150px;
 	word-wrap: break-word;
 }
+
+table {
+	width: 100%;
+	max-height: 45vh;
+	min-height: 25vh;
+}
+
+thead,
+tbody tr {
+	display: table;
+	width: 100%;
+	table-layout: fixed;
+}
+
+tbody {
+	display: block;
+	overflow-y: auto;
+	table-layout: fixed;
+	max-height: 200px;
+}
